Added Individual posts pages

--- a/post.html
+++ b/post.html
@@ -46,7 +46,7 @@
 <div class="container">
         <!--Navigation-->
         <div class="navigate">
-            <span><a href="">Home</a> >> <a href="">Subforum 1</a></span>
+            <span><a href="individual.html">Home</a> >> <a href="individual.html">Subforum 1</a></span>
         </div>
         <!--Display posts table-->
         <div class="posts-table">
@@ -57,9 +57,9 @@
             <div class="table-row">
 
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -68,9 +68,9 @@
             <!--starts here-->
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -79,9 +79,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -90,9 +90,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -101,9 +101,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -112,9 +112,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -124,9 +124,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -135,9 +135,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -146,9 +146,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
@@ -157,9 +157,9 @@
 
             <div class="table-row">
                 <div class="subjects">
-                    <a href="">Random Post Title</a>
+                    <a href="individual.html">Random Post Title</a>
                     <br>
-                    <span>Posted by <b><a href="">User</a></b> .</span>
+                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
                 </div>
                 <div class="replies">
                     # replies <br>
