--- a/post.html
+++ b/post.html
@@ -54,117 +54,16 @@
                 <div class="subjects">Subjects</div>
                 <div class="replies">Replies</div>
             </div>
-            <div class="table-row">
 
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
             <!--starts here-->
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
 
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
+            <div class="main">
+                <ol>
+                </ol>
             </div>
+            <script src="function.js"></script>
+            <script src="threadStructure.js"></script>
 
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
-
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
-
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
-
-
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
-
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
-
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
-
-            <div class="table-row">
-                <div class="subjects">
-                    <a href="individual.html">Random Post Title</a>
-                    <br>
-                    <span>Posted by <b><a href="individual.html">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    # replies <br>
-                </div>
-            </div>
             <!--ends here-->
         </div>
         <!--Pagination starts-->
@@ -174,7 +73,5 @@
         <!--pagination ends-->
     </div>
 
-
-    <script src="js/function.js"></script>
 </body>
 </html>
