--- a/thread.html
+++ b/thread.html
@@ -25,7 +25,7 @@
                  <li class="nav-item"><a href="index.html">Explore</a></li>
                </ul>
            </nav>
-           <a href="#" class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
+           <a href="#" class="bar-icon hide" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
 
   </div>
 </header>
