--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  <li class="nav-item"><a href="index.html">Explore</a></li>
                </ul>
            </nav>
-           <a href="#" class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
+           <a href="#" class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class=""></i></a>
            <div class="search-box">
                      <div>
                          <select name="" id="">
